# SIC-XE-Assembler

./: .cproject  .gitignore  .project  CMakeLists.txt  ObjCodeManually  ObjectCode.txt  README.md  srcfileOut.txt  test.txt  test2.txt  test2Out.txt  test2SymTable.txt  testOut.txt  testSymTable.txt  try.txt  tryOut.txt  trySymTable.txt
Phase_1_Tests/: 1.asm  1Out.txt  1SymTable.txt  2.txt  2Out.txt  2SymTable.txt  3.txt  3Out.txt  3SymTable.txt  4.txt  4Out.txt  4SymTable.txt  5.asm  5Out.txt  5SymTable.txt
src/: AddresingModifier.cpp  AddresingModifier.h  ControlSection.cpp  ControlSection.hpp  DisplacementCalculator.cpp  DisplacementCalculator.h  Entry.cpp  Entry.h  Entry.hpp  ExpressionEvaluator.cpp  ExpressionEvaluator.hpp  IntermediateFileParser.cpp  IntermediateFileParser.hpp  LabelProcessor.cpp  LabelProcessor.h  LitTab.cpp  LitTab.h  Literal.cpp  Literal.h  ObjectProgramGenerator.cpp  ObjectProgramGenerator.h  OpTable.cpp  OpTable.h  OpTable.hpp  Pass1.cpp  Pass1.h  Pass1.hpp  Pass2.cpp  Pass2.h  SIC-EX-Assembler.cpp  SectionsContainer.cpp  SectionsContainer.hpp  SicParser.cpp  SicParser.h  SicParser.hpp  SourceCodeTable.cpp  SourceCodeTable.h  SourceCodeTable.hpp  SymTable.cpp  SymTable.h  (+8 more)
